changed style to solve contrast error

--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,7 @@ header li{
 .main_air h2{
     font-size: 20px;
     color: black;
-    background-color: #9e9a75;
+    background-color: #D3D2CD;
     text-align: center;
     width: 60%;
     margin: 0 20%;
